--- a/client/ccabello_cliente/package.json
+++ b/client/ccabello_cliente/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "react": "^19.0.0",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
