--- a/client/ccabello_cliente/package.json
+++ b/client/ccabello_cliente/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.15"
   },
