--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "node": "^22.14.0",
     "node-gyp": "^11.1.0",
     "node-pre-gyp": "^0.17.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "pdfkit": "^0.16.0",
+    "pdfmake": "^0.2.18"
   }
 }
