--- a/client/ccabello_cliente/package.json
+++ b/client/ccabello_cliente/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "blob-stream": "^0.1.3",
+    "pdfkit": "^0.16.0",
     "react": "^19.0.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
